Fix bottom-docked navigation pane items placement on mobile layout on NC25+
Using the variable --body-container-margin to adjust the position of
these items didn't work correctly because this variable gets value 0 on
the mobile layout. Meanwhile, the cloud core uses the expression
calc(var(--default-grid-baseline)*2) for similar purpose on normal
navigation pane items, and this remains the same regardless of the
window width.

--- a/css/music-navigation.css
+++ b/css/music-navigation.css
@@ -11,7 +11,7 @@
  */
 
 .app-music #app-navigation {
-	padding-bottom: calc(88px + var(--body-container-margin, 0px) + 2 * var(--default-grid-baseline, 0px)) !important;
+	padding-bottom: calc(88px + 4 * var(--default-grid-baseline, 0px)) !important;
 	z-index: 999;
 	overflow: unset;
 }
@@ -269,7 +269,7 @@
 	right: 0;
 	height: 44px;
 	max-width: 300px;
-	margin: var(--body-container-margin);
+	margin: calc(var(--default-grid-baseline, 0px)*2);
 	z-index: 140;
 }
 
